// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zeus compiler ir-first pipeline > compiles For as an IR built-in 1`] = `
"import { mountFor as _mountFor, bindAttr as _bindAttr, marker as _marker, insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<ul><!></ul>\`),
  _tmpl$2 = /*#__PURE__*/_template(\`<li><!></li>\`);
const App = (props: {
  items: string[];
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _for$ = _marker(_el$, 0);
  _mountFor(_el$, _for$, () => props.items, undefined, (item, index) => (() => {
    const _el$2 = _tmpl$2().firstChild;
    _bindAttr(_el$2, "data-index", () => index);
    const _marker$ = _marker(_el$2, 0);
    const _text$ = document.createTextNode("");
    _insert(_el$2, _text$, _marker$);
    _bindText(_text$, () => item);
    return _el$2;
  })());
  return _el$;
})();"
`;

exports[`zeus compiler ir-first pipeline > compiles Host and Slot as IR built-ins 1`] = `
"import { createSlot as _createSlot, marker as _marker, insert as _insert, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<header><!></header>\`),
  _tmpl$2 = /*#__PURE__*/_template(\`<main><!></main>\`);
const App = () => [(() => {
  const _el$ = _tmpl$().firstChild;
  const _marker$ = _marker(_el$, 0);
  _insert(_el$, _createSlot("header", undefined), _marker$);
  return _el$;
})(), (() => {
  const _el$2 = _tmpl$2().firstChild;
  const _marker$2 = _marker(_el$2, 0);
  _insert(_el$2, _createSlot(undefined, undefined), _marker$2);
  return _el$2;
})()];"
`;

exports[`zeus compiler ir-first pipeline > compiles component calls through the IR-first feature flag 1`] = `
"import { marker as _marker, insert as _insert, bindText as _bindText, createComponent as _createComponent, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<h1><!></h1>\`);
function Title(props: {
  text: string;
}) {
  return (() => {
    const _el$ = _tmpl$().firstChild;
    const _marker$ = _marker(_el$, 0);
    const _text$ = document.createTextNode("");
    _insert(_el$, _text$, _marker$);
    _bindText(_text$, () => props.text);
    return _el$;
  })();
}
const App = () => _createComponent(Title, {
  text: "hello"
});"
`;

exports[`zeus compiler ir-first pipeline > compiles component children through the IR-first feature flag 1`] = `
"import { mountShow as _mountShow, marker as _marker, insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><!></div>\`),
  _tmpl$2 = /*#__PURE__*/_template(\`<span>Hello<!></span>\`);
import { Show } from '@zeus-js/runtime-dom';
const App = (props: {
  ok: boolean;
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _show$ = _marker(_el$, 0);
  _mountShow(_el$, _show$, () => props.ok, () => (() => {
    const _el$2 = _tmpl$2().firstChild;
    const _marker$ = _marker(_el$2, 0);
    const _text$ = document.createTextNode("");
    _insert(_el$2, _text$, _marker$);
    _bindText(_text$, () => props.name);
    return _el$2;
  })(), undefined);
  return _el$;
})();"
`;

exports[`zeus compiler ir-first pipeline > compiles explicit property bindings through the IR-first pipeline 1`] = `
"import { bindProp as _bindProp, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<input>\`);
const App = (props: {
  value: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  _bindProp(_el$, "value", () => props.value);
  return _el$;
})();"
`;

exports[`zeus compiler ir-first pipeline > compiles native element bindings through the IR-first feature flag 1`] = `
"import { child as _child, marker as _marker, insert as _insert, bindText as _bindText, bindAttr as _bindAttr, bindEvent as _bindEvent, template as _template, delegateEvents as _delegateEvents } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><span></span><!><b></b></div>\`);
const App = (props: {
  name: string;
  id: string;
  onClick: () => void;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _el$3 = _child(_el$, 2);
  const _marker$ = _marker(_el$, 0);
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _marker$);
  _bindText(_text$, () => props.name);
  _bindAttr(_el$3, "id", () => props.id);
  _bindEvent(_el$3, "click", props.onClick);
  return _el$;
})();
_delegateEvents(["click"]);"
`;

exports[`zeus compiler ir-first pipeline > compiles root fragments through the IR-first feature flag 1`] = `
"import { template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<span>First</span>\`),
  _tmpl$2 = /*#__PURE__*/_template(\`<span>Second</span>\`);
const App = () => [_tmpl$().firstChild, _tmpl$2().firstChild];"
`;
